# server

./: .env  Cargo.toml
migrations/2019-11-22-204427_init/: down.sql  up.sql
src/: main.rs  schema.rs
