[package]
name = "inf101-server"
version = "0.1.0"
authors = ["Ana Gelez <ana@gelez.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
log = "0.4"
env_logger = "0.7"
diesel = { version = "1.4", features = ["postgres", "r2d2", "chrono", "numeric"] }
r2d2 = "0.8"
dotenv = "0.15"
serde = "1.0"
serde_json = "1.0"
chrono = "0.4"
futures = "0.1"
